--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </ol>
         <ul>
         <li>
-            <a href="public/about.html" draggable="true"><em>About Me</em></a>
+            <a href="about.html" draggable="true"><em>About Me</em></a>
         </li>
             <br />
 
