--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
         <ol type="I">
           <li>
             <h2>Movie Ranking Project</h2>
-            <a href="public/movieranking.html" draggable="true"><i>Movie Ranking Project</i></a>
-            <img src="assets/images/movie ranking.png" alt="Movie ranking project" height="200" />
+            <a href="movieranking.html" draggable="true"><i>Movie Ranking Project</i></a>
+            <img src="movie ranking.png" alt="Movie ranking project" height="200" />
           </li>
             <hr />
           <li>
             <h2>Birthday Invite Project</h2>
-            <a href="public/birthdayinvite.html" draggable="true"><i>Birthday Invite Project</i></a>
-            <img src="assets/images/birthday invite.png" alt="Birthday invite project" height="200" />
+            <a href="birthdayinvite.html" draggable="true"><i>Birthday Invite Project</i></a>
+            <img src="birthday invite.png" alt="Birthday invite project" height="200" />
           </li>
             <hr />
           <li>
             <h2>Burger Recipe Project</h2>
             <a href="burger.html" draggable="true"><i>Burger Recipe Project</i></a>
-            <img src="assets/images/burger.png" alt="Burger Recipe Project" height="200"/>
+            <img src="burger.png" alt="Burger Recipe Project" height="200"/>
           </li>
            <hr />
         </ol>
@@ -51,38 +51,8 @@
             <br />
 
         <li>
-            <a href="public/contact.html" draggable="true"><em>Contact Me</em></a>
+            <a href="contact.html" draggable="true"><em>Contact Me</em></a>
        </li>
        </ul>
         </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
